tests/valid/complexity.nim
# Count: 1
# Negative count: 0

if i == 1:
  i += 1
