tests/invalid/assignments.nim
# Count: 0
# Negative count: 1

var i = 1
i = i + 1
